Apply errorprone to prevent errors.